force-app/main/default/objects/MUSW__Automation_Result__c/fields/MUSW__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Action_Type__c</fullName>
    <description>Specifies the action that the result operation should apply.</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add Adjusted Calendar Days</fullName>
            </value>
            <value>
                <fullName>Add Business Day Hours</fullName>
            </value>
            <value>
                <fullName>Add Business Days</fullName>
            </value>
            <value>
                <fullName>Add Calendar Days</fullName>
            </value>
            <value>
                <fullName>Add Calendar Hours</fullName>
            </value>
            <value>
                <fullName>Add Error</fullName>
            </value>
            <value>
                <fullName>Add Letter</fullName>
            </value>
            <value>
                <fullName>Add Notification</fullName>
            </value>
            <value>
                <fullName>Add Record</fullName>
            </value>
            <value>
                <fullName>Add Record - Duplicate Check</fullName>
                <default>true</default>
                <label>Add Record - Duplicate Check</label>
            </value>
            <value>
                <fullName>Add Record - Restriction Check</fullName>
            </value>
            <value>
                <fullName>Add Records</fullName>
            </value>
            <value>
                <fullName>Add Records - Duplicate Check</fullName>
            </value>
            <value>
                <fullName>Clone Record</fullName>
            </value>
            <value>
                <fullName>Decrement Number</fullName>
            </value>
            <value>
                <fullName>Divide Number</fullName>
            </value>
            <value>
                <fullName>Email Report</fullName>
            </value>
            <value>
                <fullName>Increment Number</fullName>
            </value>
            <value>
                <fullName>Maximum</fullName>
            </value>
            <value>
                <fullName>Minimum</fullName>
            </value>
            <value>
                <fullName>Multiply Number</fullName>
            </value>
            <value>
                <fullName>New Value (Numeric Field)</fullName>
            </value>
            <value>
                <fullName>New Value (Text Field)</fullName>
            </value>
            <value>
                <fullName>New Value - Duplicate Check</fullName>
            </value>
            <value>
                <fullName>Send Email</fullName>
            </value>
            <value>
                <fullName>Sum Numbers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>