force-app/main/default/objects/MUSW__Automation_Result__c/fields/MUSW__Active__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether the result operation should be applied or ignored.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>