force-app/main/default/objects/MUSW__Automation_Result__c/fields/MUSW__Expression__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Expression__c</fullName>
    <description>Javascript formula expression for Assess rules only. Clariti formulas in the Value field is the equivalent for all other rule types.</description>
    <label>Expression</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>