force-app/main/default/objects/MUSW__Automation_Result__c/fields/MUSW__Group__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Group__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Used to group operation results, typically per record outcomes. This may have more than one resulting record impacted by using Group.</description>
    <label>Group</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>