force-app/main/default/objects/MUSW__Automation_Result__c/fields/MUSW__Group_Order__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Group_Order__c</fullName>
    <description>Indicates the result operation order (visual only).</description>
    <formula>If(MUSW__Group__c &gt;9, text(MUSW__Group__c),&quot;0&quot; &amp;text(MUSW__Group__c)) &amp; &quot; - &quot;&amp; If(MUSW__Order__c &gt;9, text(MUSW__Order__c),&quot;0&quot; &amp;text(MUSW__Order__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group-Order</label>
    <type>Text</type>
</CustomField>