force-app/main/default/objects/MUSW__Automation_Result__c/fields/MUSW__Track_No__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Track_No__c</fullName>
    <description>Unique number of the filter that is used to migrate rule filter data.</description>
    <externalId>true</externalId>
    <label>Tracking Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>