force-app/main/default/objects/MUSW__Automation_Result__c/fields/MUSW__Transform__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Transform__c</fullName>
    <description>Instructions for applied result records before being saved. This allows more than 1 record to be applied within a single group.</description>
    <inlineHelpText>eg. &lt;repeat&gt;MUSW__Fee__c&lt;/repeat&gt;</inlineHelpText>
    <label>Transform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>